fixed row alignment in submit card form

--- a/cards.css
+++ b/cards.css
@@ -22,3 +22,7 @@ img {
 input:invalid {
     border: 1px solid red;
 }
+
+.div-card-form-row {
+    margin: auto;
+}
